# Pausify

./: APP_FLOW.md  BACKEND_SCHEMA.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  TECH_STACK.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/rohit/voicepause/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  webrtc_vad_wrapper.cpp
app/src/main/java/com/rohit/voicepause/: MainActivity.kt  ProfileIntent.kt  Settings.kt  VoiceMonitorService.kt
app/src/main/java/com/rohit/voicepause/audio/: AudioCapture.kt  AudioFeatureExtractor.kt  AudioProfile.kt  SpeakerVerifier.kt  SpeechClassifier.kt  SpeechStateMachine.kt  VadProcessor.kt  VoiceEnrollmentManager.kt  WebRtcVadWrapper.kt
app/src/main/java/com/rohit/voicepause/ui/components/: GradientRippleEffect.kt  PausifyBottomNav.kt  PausifyHeader.kt  PixelRipple.kt  ScrambledText.kt  StatusCard.kt  VolumetricSphere.kt  WaveformBackground.kt
app/src/main/java/com/rohit/voicepause/ui/screen/: ActivityScreen.kt  ControlsScreen.kt  HomeScreen.kt  Screens.kt  SettingsScreen.kt  VoiceEnrollmentScreen.kt
app/src/main/java/com/rohit/voicepause/ui/theme/: Color.kt  PausifyColors.kt  PausifyShapes.kt  PausifyTypography.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/rohit/voicepause/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ui/screen/: Screens.kt
